			   XPCE ChangeLog
			   ==============

VERSION 6.2.8, distributed with SWI-Prolog 5.2.8
================================================

* ADDED: `frame->sensitive'.  Use this to avoid tooltip (balloon) and the 
  `unclip' windows of library(pce_unclip) to grab the focus from the
  application window.

* MODIFIED: The windowing kernel now invokes `window->post_event' rather than
  `window->event'.  For most applications this just removes bugs, but
  applications that really aim at redefining the window focus and
  event-handling may break.  Such applications should redefine
  ->post_event instead of ->event.

* PORT/MODIFIED: `window->grab_pointer' maintains @grabbed_windows on all
  platform (used to be called @_grabbed_windows and only on X11).

* MODIFIED: `node->delete_tree' now calls ->destroy on the deleted nodes,
  providing guaranteed destruction of the node's <-image.  Application that
  which to preserve the images should detach them from the tree before
  deleting the node.  We believe it is unlikely that any application is
  affected.  Please contact bugs@swi-prolog.org if this change poses
  problems to you.

* ENHANCED/FIXED: X11 image routines now diagnose the image type using
  analysis of the header similar to Unix file(1) before calling the loading
  function.  This is faster and avoids trouble of unsafe loading filters
  on images of the wrong format.  Also fixes trouble running the SuSE
  RPMs on Mandrake.  Diagnosed with help of Chris Fox.

* ADDED: Support for new event-types.  See event_node->initialise.

* ADDED: Class tabular (library(tabular)): ->append now accepts
  table_cell objects.

* ADDED: drag_and_drop_gesture<-select_command to deal with command selection
  in right-dragging.

* ADDED: popup_gesture->max_drag_distance to get a popup that opens at
  the `Up' event.

* MODIFIED: Allow drag_and_drop_gesture->cursor: @default to create the
  cursor from the dragged graphical.
